# bro-spotd

./: CMakeLists.txt  Makefile  README.md
debian/: README.Debian  README.source  bro-spotd.substvars  changelog  control  copyright  debhelper-build-stamp  files
debian/.debhelper/bro-spotd/: dbgsym-build-ids
debian/.debhelper/bro-spotd/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/bro-spotd/dbgsym-root/usr/share/doc/: bro-spotd-dbgsym
debian/bro-spotd/DEBIAN/: conffiles  control  md5sums
debian/bro-spotd/etc/bro-spotd/: bro-spotd.ini
debian/bro-spotd/etc/bro/site/: local.bro
debian/bro-spotd/etc/systemd/user/: dbus-bro.spot.service
debian/bro-spotd/usr/share/bro/policy/custom/: spot-anomaly.bro
debian/bro-spotd/usr/share/dbus-1/interfaces/: bro.spot.xml
include/: BroConnection.h  Dbuspotcher.h  Dispotcher.h  MonitoredFeature.h  NetworkStats.h  colors.h
service/: bro.spot.service  dbus-bro.spot.service
src/: BroConnection.cpp  Dbuspotcher.cpp  Dispotcher.cpp  MonitoredFeature.cpp  NetworkStats.cpp  cola.hpp  main.cpp
